dependencies/charon/charon/tests/ui/simple/coinductive-perfect-derive.out
error[E0599]: no method named `clone` found for enum `List<T>` in the current scope
  --> tests/ui/simple/coinductive-perfect-derive.rs:24:18
   |
 2 | enum List<T> {
   | ------------ method `clone` not found for this enum
...
24 |     let _ = list.clone();
   |                  ^^^^^ method not found in `List<u32>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `std::clone::Clone`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
ERROR Code failed to compile
